1.Model ID by dip switch (GPIO 0,1,2,3) 2.Improve CRSF parameters read/write. Start read parameters by USER button (GPIO 9) 3.Improve ELRS command read/write 4.Record parameters into NVS

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 default_envs = super_mini_esp32c3
 
 [env]
-platform = espressif32
+platform = espressif32@6.11.0
 framework = arduino
-platform_packages =
-	platformio/framework-arduinoespressif32@^3.20017.0
+#platform_packages =
+#	platformio/framework-arduinoespressif32@^3.20017.0
 
 [env:super_mini_esp32c3]
 board = super_mini_esp32c3
